# gsiwatcher

./: README.md  Watch-UmichGsiPostings.ps1
umich-gsi-watch/: pyproject.toml  requirements.txt
umich-gsi-watch/src/umich_gsi_watch/: umich_gsi_watch.py
